# seq_logger

./: .gitignore  CMakeLists.txt  README.md  additional_unit.cpp  additional_unit.h  example.cpp
src/: HTTPRequest.hpp  seq.hpp
